Added hyperlinks to all html files

--- a/images.html
+++ b/images.html
@@ -10,6 +10,7 @@ Description : A simple HTML file .
 <!DOCTYPE html >
 <html >
 <head >
+    <br><a href="index.html">Back to Home</a>
     <title > Image Demonstration </title >
     <title > Image Demonstration </title >
     <meta charset =" UTF -8" >
@@ -34,5 +35,6 @@ Description : A simple HTML file .
     <p > This is a standard GIF image : </p >
     <img src ="images/example.gif " alt ="Example GIF Image " width = "500">
     <!--Continue extra codes here -->
+    <br><a href="./">Back to Home</a>
 </body >
 </html >
