--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ Description : A simple HTML website with different tags.
 
     <nav>
         <ul>
-            <li><!--Add a hyperlink to the News page.--></li>
-            <li><!--Add a hyperlink to the Images page.--></li>
+            <li><a href="images.html"> Images </a></li>
+            <li><a href="news.html"> News </a></li>
         </ul>
     </nav>
 
