--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@ Description : A simple HTML file.
 <!DOCTYPE html>
 <html>
 <head>
+    <br><a href="index.html">Back to Home</a>
     <title>Comprehensive HTML Page</title>
     <title > Image Demonstration </title >
     <title > Image Demonstration </title >
@@ -132,12 +133,13 @@ Description : A simple HTML file.
 		
 		<h3>Images:</h3>
         <p>Adding an image:</p>
-        <img src="images/example.jpg" alt="Example Image"> <!--Fix addressing issue-->
+        <img src="images/example.jpg" alt="Example Image" width = "1000"> <!--Fix addressing issue-->
     </section>
 
     <footer>
         <p>Copy right Tehreem and Zehra</p>
 		
     </footer>
+    <br><a href="./">Back to Home</a>
 </body>
 </html>
